# EDA-ocorrencias-aeronauticas

./: 00-EDA.ipynb  01-Modeling_Risk.ipynb  README.md  pyproject.toml  teste.csv
